Set up room system
 - Can create rooms
 - On join / leave the list of players is updated
 - Layed the foundation for the Room and Player classes (backend)

--- a/static/index.html
+++ b/static/index.html
@@ -8,5 +8,6 @@
             This is a web based version of the game Dixit made, using images 
             from <a href="http://giphy.com">giphy.com</a>.
         </p>
+        <a href="/p">Play</a>
     </body>
 </html>
